--- a/myapp/src/styles/header.css
+++ b/myapp/src/styles/header.css
@@ -5,6 +5,12 @@
 }
 nav {
   background-color: white;
-  box-shadow: 0 0 10 rgba(0, 0, 0, 0.45);
-  height: 100px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.45);
+  padding: 3rem;
+}
+nav > a {
+  font: 600 1.5rem cursive;
+  color: rgb(37, 105, 208);
+  text-decoration: none;
+  margin: 0 1rem;
 }
