--- a/1.firstproject/src/styles/Header.scss
+++ b/1.firstproject/src/styles/Header.scss
@@ -14,6 +14,7 @@ nav {
   > h1 {
     text-transform: uppercase;
   }
+
   > main {
     width: 70%;
     display: flex;
@@ -21,7 +22,7 @@ nav {
 
     > a {
       color: $dark;
-      padding: 1rem;
+      margin: 1rem;
 
       &:hover {
         color: $third;
